--- a/easy-dialog/build.gradle
+++ b/easy-dialog/build.gradle
@@ -41,11 +41,11 @@ def siteUrl = 'https://github.com/guowee/EasyDialog'    // project homepage
 def gitUrl = 'https://github.com/guowee/EasyDialog.git' // project git
 
 //发布到组织名称名字，必须填写
-group = "com.uowee.dialog"
+group = "com.muse.easy.dialog"
 //发布到JCenter上的项目名字，必须填写
 def libName = "easy-dialog"
 // 版本号，下次更新是只需要更改版本号即可
-version = "1.0.1"
+version = "1.0.0"
 
 //生成源文件
 task sourcesJar(type: Jar) {
